static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Shadows+Into+Light&display=swap');

html {
  scroll-behavior: smooth;
}

* {
  font-size: 10px;
}

html, body {
  margin: auto;
  padding: 0;
  width: 96vw;
}

/* Colours */
body{
    background-color: black;
    color: gray;
}

.bg-black {
    background-color: black;
}

a.navbar-brand.logo, a.nav-link {
    color: gray;
}

/* Typography */
.logo, h2{
    font-family: "Montserrat", sans-serif;
}

.welcome-title{
    font-family: "Montserrat", sans-serif;
    font-size: 3rem;
}

.welcome-text{
    font-family: "Montserrat", sans-serif;
    font-size: 1.6rem;
}

h5.card-title{
    font-size: 3rem;
    letter-spacing: 0.2rem;
    font-family: "Shadows Into Light", cursive;
    color: #333333;
    font-weight: bold;
}

p.card-text{
    font-size: 1.5rem;
    font-family: "Montserrat", sans-serif;
}

a.link{
    font-size: 1.5rem;
    font-family: "Montserrat", sans-serif;
}

a.nav-link, a.dropdown-item{
    font-size: 1.5rem;
    font-family: "Montserrat", sans-serif;
}

strong{
    font-size: 1.5rem;
}

a.btn{
    font-size: 2rem;
}

i{
    font-size: 2rem;
}

main div h1.center{
    font-size: 4rem;
    font-family: "Montserrat", sans-serif;
    font-weight: 600;
    text-transform: uppercase;
}

main div h2.center{
    font-size: 1.6rem;
}

.subtitle{
    font-family: "Montserrat", sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 2rem;
}

h4.flash{
    font-family: "Shadows Into Light", cursive;
    font-size: 3rem;
    text-align: center;
    color: #E8E8E8;
    margin-bottom: 6rem;
}

.name-profile{
    font-family: "Shadows Into Light", cursive;
    text-transform: uppercase;
    font-size: 3rem;
    font-weight: bold;
    text-decoration: underline;
    color: #333333;
}

.text-profile{
    font-family: "Montserrat", sans-serif;
    font-size: 1.6rem;
    color: #333333;
}

.text-form{
    font-family: "Shadows Into Light", cursive;
    color: black;
    font-size: 2.5rem;
}

.confirm{
    margin-top: 3rem;
}

/* Placing */

.center{
    text-align: center;
}

.introduction{
    margin-top: 3rem;
    margin-bottom: 6rem;
}

/* Welcome section */

.welcome{
    margin: 3rem 3rem 6rem 3rem;
    position: relative;
}

.welcome-image img {
  height: 50rem;
  
}

.overlay-text {
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
}

/* Ideas Cards */

.ideas{
    margin-bottom: 6rem;
}

.card-img-top{
    height: 28rem;
    object-fit: cover;
}

.card-body{
    background-color: #858282;
}

/* Search Bar */
.search-bar{
    width: 40rem;
    height: 3rem;
    margin: auto;
    
}


/* Navbar */
.logo {
    text-transform: uppercase;
    margin: 1.6rem;
    padding: 1rem;
    font-size: 3rem;
}

.logo span{
    font-size: 1.5rem;
    float: left;
    margin-left: 25%;
}

.navbar-collapse{
    margin-left: 7rem;
}

.nav-item{
    margin: 2rem;
}

/* Show artists */
.background-image{
    max-height: 50rem;
}

.subtitle{
    margin-bottom: 3rem;
}

.link{
    color: antiquewhite;
    text-decoration: none;
}

.link:hover, .link:active{
    color: white;
    font-weight: bold;
}

.img-panel{
height: 40rem;
object-fit: cover;
}

/* Form panel and background */
.background-image{
  background-image: url("/static/images/background.jpg");
  background-repeat: no-repeat;
  background-position: right top;
  margin-right: 5rem;
  background-size: 50rem 50rem;
  height: 50rem;
  padding: 0;
}

.sign-panel{
    height: 30rem;
    background-color: #858282;
    margin-top: 3rem;
    border: 2px solid black;
    border-radius: 2.5rem;
}

legend{
    color: black;
    text-align: center;
    margin-top: 3rem;
}

.form-input{
    border:none;
    border-bottom: 1px solid black;
    padding: 0.5rem 3rem;
    outline: none;
    background-color: gray;
    border-radius: 0px;
}

.form-input:hover{
    border-bottom: 2px solid #E8E8E8;
    cursor: pointer;
}

.form-input:focus, .form-input:active{
    /* Box shadow from https://css-tricks.com/almanac/properties/b/box-shadow/ */
    box-shadow: 0 8px 6px -6px black;
    background-color: #E8E8E8;
    border-radius: 2.5rem;
}

span.input-group-text{
    background-color: gray;
    border: none;
}

.form-icon{
    font-size: 3rem;
}


/* Code adapted from https://www.w3schools.com/howto/howto_css_placeholder.asp */
.form-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: black;
  opacity: 1; /* Firefox */
}

.form-input::-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: black;
}

.form-input::-ms-input-placeholder { /* Microsoft Edge */
  color: black
}

button, a.btn-form{
    margin-top: 3rem;
    box-shadow: 0 8px 6px -6px black;
    font-family: "Montserrat", sans-serif;
    text-transform: uppercase;
}

button.btn:hover, button.btn:focus, a.btn-form:hover, a.btn-form:focus{
    background-color: black;
}

p.link-form{
    margin-top: 3rem;
    text-align: center;
    font-family: "Montserrat", sans-serif;
    color: gray;
    font-size: 1rem;
}

p.link-form a{
    text-decoration: none;
    color: white;
}

p.link-form a:hover{
    font-weight: bold;
}

/* Profile */
.image-profile{
    max-width: 100%;
    max-height: 100%;
    display: block;
    margin: 0.5rem;
}

.icon-profile{
    font-size: 2rem;
    margin: 0.5rem;
    color: #333333;
}

.icon-section{
    text-align: right;
    padding-right: 3rem;
}

.information-section{
    padding-left: 3rem;
}

address.text-profile{
    margin-bottom: 0;
}

.address-row{
    margin-top: 6rem;
}

div.container.profile-container{
    background-color: #858282;
    border-radius: 2.5rem;
}

.profile-pic{
    margin-top: 30px;
    max-width: 30rem;
}

.bio{
    margin-top: 6rem;
    padding-right: 3rem;
}

.icon-profile.link:hover{
    text-decoration: none;
}

img{
    box-shadow: 0 8px 6px -6px black;
}

button.btn-form, a.btn-form{
    margin-bottom: 3rem;
}

button.btn-form:hover, a.btn-form:hover{
    color: #e1e1e1;
    box-shadow: 0 0 20px #e1e1e1;
    text-shadow: 0 0 15px #e1e1e1;
    border: 2px solid #e6e6e6;
}

form.add-profile input:hover, form.add-profile textarea:hover{
    color: #333333;
    box-shadow: 0 0 20px #e1e1e1;
    text-shadow: 0 0 15px #e1e1e1;
    border: 2px solid #e6e6e6;
}

/* Add Profile */
.add-profile{
    color: black;
    padding-top: 3rem;
    font-family: "Shadows Into Light", cursive;
    font-size: 2rem;
    letter-spacing: 1px;
}

form.add-profile input, textarea{
    border-radius: 25px;
    box-shadow: 0 8px 6px -6px black;
    letter-spacing: 1px;
}

form.add-profile label{
    color: #333333;
}

p.text-form.text-upload{
    padding-bottom: 3rem;
    text-align: center;
}


/* Media Queries */

@media (max-width: 991px){
    .background-image{
        margin-right: 0;
    }
    form.col.col-md-6.offset-md-1.sign-panel{
        margin-left: 0;
    }
}

@media (max-width: 768px){
    .background-image{
        background-image: none;
        margin: auto;
        padding: 0.5rem;
        width: 90%;
    }
    form.col.col-md-6.offset-md-1.sign-panel{
    margin: 0 auto;
    }
}

